---------------------------------------------------------------------------------------------------
Version: 0.9.8
Date: 19. 03. 2019
  Added:
    - Lawnmower can now be used to remove corpses by invoking alternate selection mode (by default, by holding down SHIFT key when selecting an area)
---------------------------------------------------------------------------------------------------
Version: 0.9.7
Date: 14. 03. 2019
  Bugfixes:
    - Fixed a migration issue when loading old saves with the Alien Biomes mod present
---------------------------------------------------------------------------------------------------
Version: 0.9.6
Date: 12. 03. 2019
  Added:
    - Support for placing rocks and trees when using Alien Biomes mod
    - Base Landfill will place as dirt rather than grass
  Removed:
    - Removed custom Landfill tile as 0.17.10 adds this to the base game, existing tiles will be migrated
  Bugfixes:
    - Fixes compatibility with version 4 of Alien Biomes mod
  Locales:
    - Added Portuguese, Brazilian translation (thanks to celaquila)
    - Added Spanish translation (thanks to notallme)
    - Updated Russian translation (thanks to schmarotzerltd)
---------------------------------------------------------------------------------------------------
Version: 0.9.5
Date: 08. 03. 2019
  Bugfixes:
    - Fixes an issue where a player is removed from a multiplayer game and they have left-over data
  Locales:
    - Updated Czech translation (thanks to Meritic)
    - Updated Russian translation (thanks to antonus777)
---------------------------------------------------------------------------------------------------
Version: 0.9.4
Date: 06. 03. 2019
  Added:
    - Detection of Yuoki Industries modded items to prevent multiplayer desync when placing signs
---------------------------------------------------------------------------------------------------
Version: 0.9.3
Date: 05. 03. 2019
  Added: