@@ -17,6 +17,7 @@ dectorio-decoratives=Enable Decoratives
 dectorio-item-group=Separate Crafting Tab
 dectorio-vanilla-hazard-concrete-style=Use default Factorio Hazard concrete style
 dectorio-landscaping-blueprintable=Landscaping items are blueprintable
+dectorio-painted-concrete-speed-modifier=Painted concrete speed modifier
 dectorio-decorative-removal-probability=Decoration removal probability
 dectorio-flooring-stack-size=Flooring items stack size
 dectorio-landscaping-stack-size=Landscaping items stack size
@@ -35,6 +36,7 @@ dectorio-decoratives=Enables the ability to craft decorative items for your fact
 dectorio-item-group=Moves all decorative items into a dedicated crafting tab in the inventory
 dectorio-vanilla-hazard-concrete-style=When enabled, Painted Hazard concrete will look like the default Factorio Hazard concrete when placed (requires Painted Concrete to be enabled)
 dectorio-landscaping-blueprintable=When enabled, blueprints will include landscaping features as tiles
+dectorio-painted-concrete-speed-modifier=Modifies the default walking and vehicle speed for Painted concrete by this amount (1 = no change to speed (default), 0.75 = 75% of default speed, 0.5 = 50% of default speed)
 dectorio-decorative-removal-probability=The probability that decorations, such as bushes and grasses, are removed when flooring tiles are placed (1 = 100% are removed (default), 0.5 = 50%, 0 = none are removed)
 dectorio-flooring-stack-size=The number of flooring items that can be stacked in one inventory slot (default = 500)
 dectorio-landscaping-stack-size=The number of landscaping items that can be stacked in one inventory slot (default = 500)
