@@ -3,6 +3,7 @@ Version: 0.9.8
 Date: 19. 03. 2019
   Added:
     - Lawnmower can now be used to remove corpses by invoking alternate selection mode (by default, by holding down SHIFT key when selecting an area)
+    - New setting to adjust walking and vehicle speeds of Painted concrete by a custom amount, allowing concrete to be used as a safety barrier around hazards (by default, this option is off)
 ---------------------------------------------------------------------------------------------------
 Version: 0.9.7
 Date: 14. 03. 2019
